deployments/k8s/overlays/mainnet/ovh-regcred.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: c4e-web-app
spec:
  template:
    spec:
      imagePullSecrets:
        - name: regcred
