deployments/k8s/overlays/mainnet/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: c4e-web-app
spec:
  hosts:
    - wallet.c4e.io
  gateways:
    - explorer/public-gateway
  http:
    - route:
        - destination:
            host: c4e-web-app.mainnet.svc.cluster.local
            port:
              number: 80
